0.1706
    - DBIx::Custom::Query table and filters attribute method and
      filter method is DEPRECATED!
      because I think query object must have only the information
      for statement handle caching.
0.1705
    - insert and update method's param can set constant value by scalara reference
      such as {date => \"NOW()"} This is EXPERIMENTAL.
0.1704
    - added quote method's two character support like []
      for Microsoft SQL Server and Access
    - added EXPERIMENTAL parameter new syntax :name{operator}
0.1703
    - added EXPERIMENTAL join new syntax.
0.1702
    - removed EXPERIMENTAL status of some methods.
    - fixed some join bug
0.1701
    - added DBIx::Cusotm::Order prepend method automatically quoted syntax
    - simplified arguments check
    - added EXPERIMENTAL each_table method
    - select method column option [COLUMN, as => ALIAS] format is DEPRECATED!
      changed to [COLUMN => ALIAS]
    - added EXPERIMENTAL DBIx::Custom::Result header method
    - added EXPERIMENTAL last_sql attribute method
0.1700
    - fixed end_filter DEPRECATED warnings bug
0.1699
    - added tag_parse attribute.
    - added EXPERIMENTAL order method
    - added EXPERIMENTAL DBIx::Custom::Order module
    - changed backword compatible policy
      ------------------------------------------------------------------------
      If a functionality is DEPRECATED, you can know it by DEPRECATED warnings
      except for attribute method.
      You can check all DEPRECATED functionalities by document.
      DEPRECATED functionality is removed after five years,
      but if at least one person use the functionality and tell me that thing
      I extend one year each time you tell me it.

      EXPERIMENTAL functionality will be changed without warnings.
      ------------------------------------------------------------------------
0.1698
    - fixed DBIx::Custom::Where to_string method small bug
    - added EXPERIMENTAL execute method table_alias option
0.1697