@@ -1,4 +1,6 @@
 0.1706
+    - Added execute method's query option document
+      You can get more performance.
     - DBIx::Custom::Query table and filters attribute method and
       filter method is DEPRECATED!
       because I think query object must have only the information
